--- a/Admin/Layouts/PanelledEditor/PanelledEditor.scss
+++ b/Admin/Layouts/PanelledEditor/PanelledEditor.scss
@@ -57,7 +57,7 @@
 		&-items {
 			list-style: none;
 			margin: 0;
-			padding: 0 .5rem 0 .25rem;
+			padding: 0 .25rem;
 			height: 100%;
 			background: #fff;
 			border: 1px solid #E6E9ED;
@@ -69,6 +69,7 @@
 			display: flex;
 			align-items: center;
 			flex-wrap: nowrap;
+			padding-right: .25rem;
 
 			.collapsible {
 				width: 100%;
@@ -76,34 +77,32 @@
 				.collapsible-summary {
 					padding: 0.375rem 0;
 					border: 0;
+					align-items: stretch;
 
 					.collapsible-title {
 						font-size: .875rem;
 					}
 
-					.btn-outline-primary {
-						border-color: var(--danger);
-						color: var(--danger);
+					.btn-outline-danger {
 						padding: .125rem .25rem;
 						border-radius: .25rem;
 						font-size: .75rem;
 						margin-left: auto;
-						
-						&:hover {
-							background-color: var(--danger);
-							color: var(--danger-fg);
-						}
+					}
 
-						&:focus {
-							box-shadow: 0 0 0 0.25rem var(--danger-shadow);
-						}
-
+					.buttons .btn {
+						height: 100%;
 					}
 				}
 
 				.collapsible-content {
 					padding: 0 0 0 1.6rem;
 					border: 0;
+
+					&__wrapper--selected {
+						background: var(--admin-selected-bg, var(--fallback__admin-selected-bg));
+						color: var(--admin-selected-fg, var(--fallback__admin-selected-fg));
+					}
 				}
 
 			}
@@ -119,6 +118,11 @@
 				margin-left: auto;
 			}
 
+			&--selected {
+				background: var(--admin-selected-bg, var(--fallback__admin-selected-bg));
+				color: var(--admin-selected-fg, var(--fallback__admin-selected-fg));
+			}
+
 		}
 
 		button#{$panelled-editor__structure}-item-text {
@@ -126,6 +130,7 @@
 			font-size: .875rem;
 			font-weight: bold;
 			text-align: left;
+			flex: 1 0 auto;
 		}
 
 	}
